Fix: Increase spacing between Version dropdown and Login button
Fixes #2400

Changes:

- Increased margin-left of .login-hdr from 10px to 15px to improve spacing between the Version dropdown and Login button.

--- a/app/eventyay/static/pretixpresale/scss/main.scss
+++ b/app/eventyay/static/pretixpresale/scss/main.scss
@@ -53,7 +53,7 @@ $body-bg: #f5f5f5 !default;
 }
 
 .login-hdr {
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 
